Bug 1056617 - Don't try to do panning for OS X pan events that are not preceded by a 'pan begin' event. r=mstange